--- a/doc/man/cli.1
+++ b/doc/man/cli.1
@@ -28,7 +28,7 @@ Command line interface compiler.
 .IP "\[ci]" 4
 \fB\-\-[no]\-color\fR: Enable or disable terminal colors.
 .IP "\[ci]" 4
-\fB\-o, \-\-output=[file]\fR: Output javascript file.
+\fB\-o, \-\-output=[file]\fR: Output file.
 .IP "\[ci]" 4
 \fB\-k, \-\-package=[file]\fR: Use package descriptor.
 .IP "\[ci]" 4
@@ -36,11 +36,11 @@ Command line interface compiler.
 .IP "\[ci]" 4
 \fB\-n, \-\-name=[name]\fR: Set program name.
 .IP "\[ci]" 4
-\fB\-i, \-\-input=[file...]\fR: Markdown input files.
+\fB\-i, \-\-input=[file...]\fR: Input files.
 .IP "\[ci]" 4
 \fB\-d, \-\-desc=[desc]\fR: Set program description.
 .IP "\[ci]" 4
-\fB\-p, \-\-print\fR: Print compiled javascript.
+\fB\-p, \-\-print\fR: Print result.
 .IP "\[ci]" 4
 \fB\-f, \-\-force\fR: Force file overwrite.
 .IP "\[ci]" 4
